navigation and banner added

--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,89 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>FASHION-BD</title>
+    <link rel='shortcut icon' href='../src/img/logo.jpg' type='image/x-icon'>
 </head>
 
 <body>
-    <h2>welcome to webpack world</h2>
-    <h3>welcome to webpack world</h3>
-    <h4>welcome to webpack world</h4>
-    <h5>welcome to webpack world</h5>
-    <h6>welcome to webpack world</h6>
-    <h1>welcome to webpack world</h1>
-    <h2>welcome to webpack world</h2>
-    <h3>welcome to webpack world</h3>
-    <h4>welcome to webpack world</h4>
-    <h5>welcome to webpack world</h5>
-    <h6>welcome to webpack world sdfsdfsdf</h6>
+    <header>
+        <nav class="container">
+            <div class='logo'>
+                <a href='#'>FASHION-BD.</a>
+            </div>
+            <div class='links'>
+                <a href='#'>Home</a>
+                <a href='#'>Shop</a>
+                <a href='#'>Blog</a>
+                <a href='#'>Product</a>
+                <a href='#'>Brand</a>
+                <a href='#'>Contract</a>
+                <a href='#'>Hart</a>
+                <a href='#'>Cart</a>
+            </div>
+        </nav>
+    </header>
+    <!-------------------
+         Main part start 
+    ---------------------->
+    <main>
+        <!-- Banner part start -->
+        <section class="banner">
+            <div class='banner-text'>
+                <p>Ultimate Collection</p>
+                <h1>Complete Men's <br> Fashion Here</h1>
+                <button>Shop Now</button>
+            </div>
+            <div class='banner-img'>
+                <img src='../src/img/banner.png' alt=''>
+            </div>
+        </section>
+        <!-- Banner part end -->
+        <!-- Featured Products part start -->
+        <section class="container">
+            <div class='featured'>
+                <h2>featured products</h2>
+            </div>
+            <div class='products'>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image1.jpg' alt='image1'>
+                    </div>
+                    <div class=''>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>350</span></p>
+                    </div>
+                </div>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image2.jpg' alt=''>
+                    </div>
+                    <div class=''>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>410</span></p>
+                    </div>
+                </div>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image3.jpg' alt=''>
+                    </div>
+                    <div class=''>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>230</span></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Featured Products part end -->
+    </main>
+    <!-------------------
+         Main part end 
+    ---------------------->
+    <!-- Footer part start -->
+    <footer></footer>
+    <!-- Footer part end -->
 </body>
 
 </html>
