page layout using html and temporary css

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>FASHION-BD</title>
+    <title>FASHION-BD.</title>
     <link rel='shortcut icon' href='../src/img/logo.jpg' type='image/x-icon'>
 </head>
 
@@ -53,7 +53,7 @@
                     <div class=''>
                         <img src='../src/img/image1.jpg' alt='image1'>
                     </div>
-                    <div class=''>
+                    <div class='product-details'>
                         <p>discription is here</p>
                         <p>rating</p>
                         <p>$<span>350</span></p>
@@ -63,7 +63,7 @@
                     <div class=''>
                         <img src='../src/img/image2.jpg' alt=''>
                     </div>
-                    <div class=''>
+                    <div class='product-details'>
                         <p>discription is here</p>
                         <p>rating</p>
                         <p>$<span>410</span></p>
@@ -73,7 +73,7 @@
                     <div class=''>
                         <img src='../src/img/image3.jpg' alt=''>
                     </div>
-                    <div class=''>
+                    <div class='product-details'>
                         <p>discription is here</p>
                         <p>rating</p>
                         <p>$<span>230</span></p>
@@ -82,12 +82,257 @@
             </div>
         </section>
         <!-- Featured Products part end -->
+        <!-- Offer Banner part start -->
+        <section class="offerBanner">
+            <div class='container'>
+                <div class='offer'>
+                    <div class='offer-text'>
+                        <h1>50% Off</h1>
+                        <h2>All Men's Collection</h2>
+                        <button>Shop Now</button>
+                    </div>
+                    <div class='offer-img'>
+                        <img src='../src/img/banner.png' alt=''>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Offer Banner part end -->
+        <!-- Most Popular part start -->
+        <section class="container">
+            <div class='popularProduct'>
+                <h2>Most Popular</h2>
+            </div>
+            <div class='products'>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image2.jpg' alt=''>
+                    </div>
+                    <div class='product-details'>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>410</span></p>
+                    </div>
+                </div>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image2.jpg' alt=''>
+                    </div>
+                    <div class='product-details'>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>410</span></p>
+                    </div>
+                </div>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image2.jpg' alt=''>
+                    </div>
+                    <div class='product-details'>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>410</span></p>
+                    </div>
+                </div>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image2.jpg' alt=''>
+                    </div>
+                    <div class='product-details'>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>410</span></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Most Popular part end -->
+        <!-- Service Facilities part start -->
+        <section class="container">
+            <div class='Facilities'>
+                <div class='Faciliti'>
+                    <div class=''>
+                        <img src='./img/logo.jpg' alt=''>
+                    </div>
+                    <div class=''>
+                        <h5>Lorem ipsum dolor sit </h5>
+                        <p>amet consectetur adipisicing consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class='Faciliti'>
+                    <div class=''>
+                        <img src='./img/logo.jpg' alt=''>
+                    </div>
+                    <div class=''>
+                        <h5>Lorem ipsum dolor sit </h5>
+                        <p>amet consectetur adipisicing consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class='Faciliti'>
+                    <div class=''>
+                        <img src='./img/logo.jpg' alt=''>
+                    </div>
+                    <div class=''>
+                        <h5>Lorem ipsum dolor sit </h5>
+                        <p>amet consectetur adipisicing consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class='Faciliti'>
+                    <div class=''>
+                        <img src='./img/logo.jpg' alt=''>
+                    </div>
+                    <div class=''>
+                        <h5>Lorem ipsum dolor sit </h5>
+                        <p>amet consectetur adipisicing consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Service Facilities part end -->
+        <!-- Trending Product part start -->
+        <section class="container">
+            <div class='Trending'>
+                <h2>Trending Product</h2>
+            </div>
+            <div class='products'>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image2.jpg' alt=''>
+                    </div>
+                    <div class='product-details'>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>410</span></p>
+                    </div>
+                </div>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image2.jpg' alt=''>
+                    </div>
+                    <div class='product-details'>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>410</span></p>
+                    </div>
+                </div>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image2.jpg' alt=''>
+                    </div>
+                    <div class='product-details'>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>410</span></p>
+                    </div>
+                </div>
+                <div class='product'>
+                    <div class=''>
+                        <img src='../src/img/image2.jpg' alt=''>
+                    </div>
+                    <div class='product-details'>
+                        <p>discription is here</p>
+                        <p>rating</p>
+                        <p>$<span>410</span></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Trending Product part end -->
+        <!-- Journal part start -->
+        <section class="container">
+            <div class='JournalMain'>
+                <h2>FASHION-BD. Journal</h2>
+                <div class='journals'>
+                    <div class='journal'>
+                        <div class=''>
+                            <img src='./img/image1.jpg' alt=''>
+                        </div>
+                        <div class=''>
+                            <p>Date is here</p>
+                            <h5>journal heading journal heading journal headingjournal heading journal heading</h5>
+                            <div class=''>
+                                <span>Man's Fashion</span>
+                                <span>comment</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='journal'>
+                        <div class=''>
+                            <img src='./img/image1.jpg' alt=''>
+                        </div>
+                        <div class=''>
+                            <p>Date is here</p>
+                            <h5>journal heading journal heading journal headingjournal heading journal heading</h5>
+                            <div class=''>
+                                <span>Man's Fashion</span>
+                                <span>comment</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='journal'>
+                        <div class=''>
+                            <img src='./img/image1.jpg' alt=''>
+                        </div>
+                        <div class=''>
+                            <p>Date is here</p>
+                            <h5>journal heading journal heading journal headingjournal heading journal heading</h5>
+                            <div class=''>
+                                <span>Man's Fashion</span>
+                                <span>comment</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Journal part end -->
+        <!-- Follow part start -->
+        <section class="container">
+            <div class=''>
+                <h2>Follow Us</h2>
+                <div class='followed'>
+                    <div class='media'>
+                        <img src='./img/logo.jpg' alt=''>
+                    </div>
+                    <div class='media'>
+                        <img src='./img/logo.jpg' alt=''>
+                    </div>
+                    <div class='media'>
+                        <img src='./img/logo.jpg' alt=''>
+                    </div>
+                    <div class='media'>
+                        <img src='./img/logo.jpg' alt=''>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Follow part end -->
     </main>
     <!-------------------
          Main part end 
     ---------------------->
     <!-- Footer part start -->
-    <footer></footer>
+    <footer class="footerMain">
+        <div class='container'>
+            <div class='footer'>
+                <div class=''>
+                    <p>About us</p>
+                </div>
+                <div class=''>
+                    <p>Usefull link</p>
+                </div>
+                <div class=''>
+                    <p>Online Shoping</p>
+                </div>
+                <div class=''>
+                    <p>Experience app on mobile</p>
+                </div>
+            </div>
+        </div>
+        <div class=''>
+            <p>Copyright @ 2022 FASHION-BD. All Right Reserved</p>
+        </div>
+    </footer>
     <!-- Footer part end -->
 </body>
 
