add images and text content

--- a/src/index.html
+++ b/src/index.html
@@ -53,11 +53,11 @@
         <section class="bannerMain">
             <div class='bannerText'>
                 <p class="light-para">Ultimate Collection</p>
-                <h1>Complete Men's <br> Fashion Here</h1>
+                <h1>Complete Women's <br> Fashion Here</h1>
                 <button>Shop Now</button>
             </div>
             <div class='bannerImg'>
-                <img src='../src/img/banner.png' alt=''>
+                <img src='../src/img/bannar.png' alt='bannar'>
             </div>
         </section>
         <!-- Banner part end -->
@@ -70,10 +70,10 @@
                 <div class='featuredProducts'>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/Featured1.jpg' alt='Featured1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion featured clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -86,10 +86,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/Featured2.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion featured clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -102,10 +102,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/Featured3.jpg' alt='Featured3'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion featured clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -124,11 +124,11 @@
         <section class="offerBanner marginY">
             <div class='offerText'>
                 <h1 class="offerh1">50% Off</h1>
-                <h2 class="offerh2">All Men's Collection</h2>
+                <h2 class="offerh2">All Women's Collection</h2>
                 <button>Shop Now</button>
             </div>
             <div class='offerImg'>
-                <img src='../src/img/image3.jpg' alt=''>
+                <img src='../src/img/offer-banner.png' alt='offer-banner'>
             </div>
         </section>
         <!-- Offer Banner part end -->
@@ -141,10 +141,10 @@
                 <div class='popularProducts'>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual1.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -157,10 +157,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual2.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -173,10 +173,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual3.webp' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -189,10 +189,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual4.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -244,10 +244,10 @@
                 <div class='trendingProducts'>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual5.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -260,10 +260,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual6.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -276,10 +276,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual7.webp' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -292,10 +292,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual8.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -308,10 +308,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual1.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -324,10 +324,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual2.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -340,10 +340,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual3.webp' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -356,10 +356,10 @@
                     </div>
                     <div class='product'>
                         <div class='productImg'>
-                            <img src='../src/img/image1.jpg' alt='image1'>
+                            <img src='../src/img/casual4.jpg' alt='image1'>
                         </div>
                         <div class='productDetails'>
-                            <p class="light-para">discription is here</p>
+                            <p class="light-para">Women's fashion casual clothes</p>
                             <p class="star-color">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -383,14 +383,14 @@
                 <div class='journals'>
                     <div class='journal'>
                         <div class='journalImg'>
-                            <img src='./img/image1.jpg' alt=''>
+                            <img src='./img/Journal1.jpg' alt=''>
                         </div>
                         <div class='journalText'>
                             <p class="light-para">10 October, 2022</p>
                             <h4>International Journal of Clothing Science and Technology.</h4>
                             <div class='journalFooter'>
                                 <i class="fa-solid fa-book-open journalIcon"></i>
-                                <span class="light-para journalIcon">Man's Fashion</span>
+                                <span class="light-para journalIcon">Women's Fashion</span>
                                 <i class="fa-regular fa-comment journalIcon"></i>
                                 <span class="light-para">2 comment</span>
                             </div>
@@ -398,14 +398,14 @@
                     </div>
                     <div class='journal'>
                         <div class='journalImg'>
-                            <img src='./img/image1.jpg' alt=''>
+                            <img src='./img/Journal2.jpg' alt=''>
                         </div>
                         <div class='journalText'>
                             <p class="light-para">10 October, 2022</p>
                             <h4>International Journal of Clothing Science and Technology.</h4>
                             <div class='journalFooter'>
                                 <i class="fa-solid fa-book-open journalIcon"></i>
-                                <span class="light-para journalIcon">Man's Fashion</span>
+                                <span class="light-para journalIcon">Women's Fashion</span>
                                 <i class="fa-regular fa-comment journalIcon"></i>
                                 <span class="light-para">2 comment</span>
                             </div>
@@ -413,14 +413,14 @@
                     </div>
                     <div class='journal'>
                         <div class='journalImg'>
-                            <img src='./img/image1.jpg' alt=''>
+                            <img src='./img/Journal3.webp' alt=''>
                         </div>
                         <div class='journalText'>
                             <p class="light-para">10 October, 2022</p>
                             <h4>International Journal of Clothing Science and Technology.</h4>
                             <div class='journalFooter'>
                                 <i class="fa-solid fa-book-open journalIcon"></i>
-                                <span class="light-para journalIcon">Man's Fashion</span>
+                                <span class="light-para journalIcon">Women's Fashion</span>
                                 <i class="fa-regular fa-comment journalIcon"></i>
                                 <span class="light-para">2 comment</span>
                             </div>
@@ -438,16 +438,16 @@
                 </div>
                 <div class='FollowUs'>
                     <div class='Follow'>
-                        <img src='./img/logo.jpg' alt=''>
+                        <img src='./img/follow2.jpg' alt=''>
                     </div>
                     <div class='Follow'>
-                        <img src='./img/logo.jpg' alt=''>
+                        <img src='./img/follow1.jpg' alt=''>
                     </div>
                     <div class='Follow'>
-                        <img src='./img/logo.jpg' alt=''>
+                        <img src='./img/follow4.jpg' alt=''>
                     </div>
                     <div class='Follow'>
-                        <img src='./img/logo.jpg' alt=''>
+                        <img src='./img/follow3.jpg' alt=''>
                     </div>
                 </div>
             </div>
@@ -481,21 +481,35 @@
                 </div>
                 <div class='footer'>
                     <h4 class="heading">Online Shoping</h4>
-                    <p class='light-para'>How we are</p>
-                    <p class='light-para'>Work with us</p>
-                    <p class='light-para'>Become a supplier</p>
-                    <p class='light-para'>Investor relation</p>
-                    <p class='light-para'>Our device</p>
-                    <p class='light-para'>Programs</p>
+                    <p class='light-para'>Men Shopping</p>
+                    <p class='light-para'>Women Shopping</p>
+                    <p class='light-para'>Gift Card</p>
+                    <p class='light-para'>Electronics</p>
+                    <p class='light-para'>Accessories</p>
+                    <p class='light-para'>Home</p>
                 </div>
                 <div class='footer'>
-                    <h4 class="heading">Experience app on mobile</h4>
-                    <p class='light-para'>How we are</p>
-                    <p class='light-para'>Work with us</p>
-                    <p class='light-para'>Become a supplier</p>
-                    <p class='light-para'>Investor relation</p>
-                    <p class='light-para'>Our device</p>
-                    <p class='light-para'>Programs</p>
+                    <h4 class="heading">Experience App On Mobile</h4>
+                    <div class=''>
+                        <div class='google'>
+                            <div class=''>
+                                <i class="fa-brands fa-google-play fotIcon"></i>
+                            </div>
+                            <div class=''>
+                                <p class="light-para">get it on</p>
+                                <h4>Google Play</h4>
+                            </div>
+                        </div>
+                        <div class='apple'>
+                            <div class=''>
+                                <i class="fa-brands fa-apple fotIcon"></i>
+                            </div>
+                            <div class=''>
+                                <p class="light-para">get it on</p>
+                                <h4>App Store</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
